# Portfolio

./: .gitignore  CLAUDE.md  INSTALL.md  PRD.md  Portfolio Taxonomy Reference.md  README.md  pyproject.toml
.streamlit/: config.toml
deploy/: com.portfolio.dashboard.plist  com.portfolio.refresh.plist  install.sh
src/portfolio/: cli.py  config.py
src/portfolio/auth/: keychain.py  schwab_oauth.py  setup_secrets.py
src/portfolio/dashboard/: app.py
src/portfolio/dashboard/components/: sidebar.py
src/portfolio/dashboard/pages/: 2_Holdings.py  3_Allocation.py  4_Performance.py  5_Income.py  6_Risk.py  7_Accounts.py
src/portfolio/metrics/: __init__.py  allocation.py  income.py  performance.py  risk.py
src/portfolio/pipeline/: daily_refresh.py  transforms.py
src/portfolio/sources/: allocations.py  ml_benefits.py  schwab_client.py
src/portfolio/storage/: reader.py  schema.py  writer.py
